fix: added superservice and swagger documentation
