# docs/meta_user.go
@@ -2,24 +2,12 @@ package docs
 
 // swagger:route GET /library/users user UsersList
 //		Список читателей
-// Security:
-// - basic
-// Responses:
-// 	 200: body:User Список читателей успешно получен
-
-// swagger:model User
-type UsersList struct {
-	// in:body
-	ID    int    `json:"id"`
-	Name  string `json:"name"`
-	Email string `json:"email"`
-}
+// responses:
+// 	 200: body:[]User Список читателей успешно получен
 
 // swagger:route POST /library/user user UserAdd
 //		Добавить читателя
-// Security:
-// - basic
-// Responses:
+// responses:
 // 	 200: body:User Читатель успешно добавлен
 
 // swagger:model
